admin/downloads/v037/VALLEY_RELEASE_LINKS_MODULOS_ABNT.md
# Valley - Links Release por Módulo

Documento fonte do PDF ABNT com links clicáveis separados em Admin, Lojista e Usuário.

## Admin

| Módulo | Tela/Painel | Link | Relação |
|---|---|---|---|
| ADMIN | Painel admin Valley | [admin.brasildesconto.com.br](https://admin.brasildesconto.com.br/) | Controla módulo, regras, governança e operação global. |
| REPLY | REPLY - Valley REPLY | [01-reply-admin.brasildesconto.com.br](https://01-reply-admin.brasildesconto.com.br/) | Controla módulo, regras, governança e operação global. |
| STOCK | STOCK - Valley Stock | [02-stock-admin.brasildesconto.com.br](https://02-stock-admin.brasildesconto.com.br/) | Alimenta catálogo, fornecedores, estoque e precificação. |
| LOG | LOG - Valley Log | [03-log-admin.brasildesconto.com.br](https://03-log-admin.brasildesconto.com.br/) | Controla módulo, regras, governança e operação global. |
| FOOD | FOOD - Valley Food | [04-food-admin.brasildesconto.com.br](https://04-food-admin.brasildesconto.com.br/) | Controla módulo, regras, governança e operação global. |
| DELIVERY | DELIVERY - Valley Delivery | [05-delivery-admin.brasildesconto.com.br](https://05-delivery-admin.brasildesconto.com.br/) | Controla módulo, regras, governança e operação global. |
| WMS | WMS - Valley WMS | [06-wms-admin.brasildesconto.com.br](https://06-wms-admin.brasildesconto.com.br/) | Controla módulo, regras, governança e operação global. |
| MARKETPLACE | MARKETPLACE - Valley Marketplace | [07-marketplace-admin.brasildesconto.com.br](https://07-marketplace-admin.brasildesconto.com.br/) | Controla integrações, canais, lojistas e publicações. |
| PAY | PAY - Valley Pay | [08-pay-admin.brasildesconto.com.br](https://08-pay-admin.brasildesconto.com.br/) | Conecta checkout, repasses, taxas e conciliação. |
| FLEET | FLEET - Valley Fleet | [09-fleet-admin.brasildesconto.com.br](https://09-fleet-admin.brasildesconto.com.br/) | Controla módulo, regras, governança e operação global. |
| SERVICES | SERVICES - Valley Services | [10-services-admin.brasildesconto.com.br](https://10-services-admin.brasildesconto.com.br/) | Controla módulo, regras, governança e operação global. |
| DIGITAL | DIGITAL - Valley Digital | [11-digital-admin.brasildesconto.com.br](https://11-digital-admin.brasildesconto.com.br/) | Controla módulo, regras, governança e operação global. |
| REAL_ESTATE | REAL_ESTATE - Valley Real Estate | [12-real-estate-admin.brasildesconto.com.br](https://12-real-estate-admin.brasildesconto.com.br/) | Controla módulo, regras, governança e operação global. |
| HEALTH | HEALTH - Valley Health | [13-health-admin.brasildesconto.com.br](https://13-health-admin.brasildesconto.com.br/) | Controla módulo, regras, governança e operação global. |
| EDU | EDU - Valley Edu | [14-edu-admin.brasildesconto.com.br](https://14-edu-admin.brasildesconto.com.br/) | Controla módulo, regras, governança e operação global. |
| TECH | TECH - Valley Tech | [15-tech-admin.brasildesconto.com.br](https://15-tech-admin.brasildesconto.com.br/) | Controla módulo, regras, governança e operação global. |
| JOBS | JOBS - Valley Jobs | [16-jobs-admin.brasildesconto.com.br](https://16-jobs-admin.brasildesconto.com.br/) | Controla módulo, regras, governança e operação global. |
| NEWS_PODCAST | NEWS_PODCAST - Valley News & Podcast | [17-news-podcast-admin.brasildesconto.com.br](https://17-news-podcast-admin.brasildesconto.com.br/) | Controla módulo, regras, governança e operação global. |
| ADS | ADS - Valley Ads | [18-ads-admin.brasildesconto.com.br](https://18-ads-admin.brasildesconto.com.br/) | Controla módulo, regras, governança e operação global. |
| INFLUENCERS | INFLUENCERS - Valley Influencers | [19-influencers-admin.brasildesconto.com.br](https://19-influencers-admin.brasildesconto.com.br/) | Controla módulo, regras, governança e operação global. |
| SOCIAL | SOCIAL - Valley Social | [20-social-admin.brasildesconto.com.br](https://20-social-admin.brasildesconto.com.br/) | Controla módulo, regras, governança e operação global. |
| FITNESS | FITNESS - Valley Fitness | [21-fitness-admin.brasildesconto.com.br](https://21-fitness-admin.brasildesconto.com.br/) | Controla módulo, regras, governança e operação global. |
| PHARMACY | PHARMACY - Valley Pharmacy | [22-pharmacy-admin.brasildesconto.com.br](https://22-pharmacy-admin.brasildesconto.com.br/) | Controla módulo, regras, governança e operação global. |
| VET | VET - Valley Vet | [23-vet-admin.brasildesconto.com.br](https://23-vet-admin.brasildesconto.com.br/) | Controla módulo, regras, governança e operação global. |
| TOURISM | TOURISM - Valley Tourism | [24-tourism-admin.brasildesconto.com.br](https://24-tourism-admin.brasildesconto.com.br/) | Controla módulo, regras, governança e operação global. |
| EVENTS | EVENTS - Valley Events | [25-events-admin.brasildesconto.com.br](https://25-events-admin.brasildesconto.com.br/) | Controla módulo, regras, governança e operação global. |
| MOBILITY | MOBILITY - Valley Mobility | [26-mobility-admin.brasildesconto.com.br](https://26-mobility-admin.brasildesconto.com.br/) | Controla módulo, regras, governança e operação global. |
| SECURITY | SECURITY - Valley Security | [27-security-admin.brasildesconto.com.br](https://27-security-admin.brasildesconto.com.br/) | Controla módulo, regras, governança e operação global. |
| GOV | GOV - Valley Gov | [28-gov-admin.brasildesconto.com.br](https://28-gov-admin.brasildesconto.com.br/) | Controla módulo, regras, governança e operação global. |
| LEGAL | LEGAL - Valley Legal | [29-legal-admin.brasildesconto.com.br](https://29-legal-admin.brasildesconto.com.br/) | Controla módulo, regras, governança e operação global. |
| CHARITY | CHARITY - Valley Charity | [30-charity-admin.brasildesconto.com.br](https://30-charity-admin.brasildesconto.com.br/) | Controla módulo, regras, governança e operação global. |
| INSURANCE | INSURANCE - Valley Insurance | [31-insurance-admin.brasildesconto.com.br](https://31-insurance-admin.brasildesconto.com.br/) | Controla módulo, regras, governança e operação global. |
| GAMING | GAMING - Valley Gaming | [32-gaming-admin.brasildesconto.com.br](https://32-gaming-admin.brasildesconto.com.br/) | Controla módulo, regras, governança e operação global. |
| IOT | IOT - Valley IoT | [33-iot-admin.brasildesconto.com.br](https://33-iot-admin.brasildesconto.com.br/) | Controla módulo, regras, governança e operação global. |
| BIO | BIO - Valley Bio | [34-bio-admin.brasildesconto.com.br](https://34-bio-admin.brasildesconto.com.br/) | Controla módulo, regras, governança e operação global. |
| HOME | HOME - Valley Home | [35-home-admin.brasildesconto.com.br](https://35-home-admin.brasildesconto.com.br/) | Controla módulo, regras, governança e operação global. |
| ENERGY | ENERGY - Valley Energy | [36-energy-admin.brasildesconto.com.br](https://36-energy-admin.brasildesconto.com.br/) | Controla módulo, regras, governança e operação global. |
| SPACE | SPACE - Valley Space | [37-space-admin.brasildesconto.com.br](https://37-space-admin.brasildesconto.com.br/) | Controla módulo, regras, governança e operação global. |
| AGENDA | AGENDA - Valley Agenda | [38-agenda-admin.brasildesconto.com.br](https://38-agenda-admin.brasildesconto.com.br/) | Controla módulo, regras, governança e operação global. |
| ADVISOR | ADVISOR - Valley Advisor | [39-advisor-admin.brasildesconto.com.br](https://39-advisor-admin.brasildesconto.com.br/) | Controla módulo, regras, governança e operação global. |
| FINANCAS | FINANCAS - Valley Financas | [40-financas-admin.brasildesconto.com.br](https://40-financas-admin.brasildesconto.com.br/) | Controla módulo, regras, governança e operação global. |
| MENTE | MENTE - Valley Mente | [41-mente-admin.brasildesconto.com.br](https://41-mente-admin.brasildesconto.com.br/) | Controla módulo, regras, governança e operação global. |
| BUSINESS | BUSINESS - Valley Business | [42-business-admin.brasildesconto.com.br](https://42-business-admin.brasildesconto.com.br/) | Controla módulo, regras, governança e operação global. |
| PLUG | PLUG - Valley Plug | [43-plug-admin.brasildesconto.com.br](https://43-plug-admin.brasildesconto.com.br/) | Controla módulo, regras, governança e operação global. |
| UP | UP - Valley Up | [44-up-admin.brasildesconto.com.br](https://44-up-admin.brasildesconto.com.br/) | Controla módulo, regras, governança e operação global. |
| MEDIA | MEDIA - Valley Media | [45-media-admin.brasildesconto.com.br](https://45-media-admin.brasildesconto.com.br/) | Controla módulo, regras, governança e operação global. |
| CHAT | CHAT - Valley Chat | [46-chat-admin.brasildesconto.com.br](https://46-chat-admin.brasildesconto.com.br/) | Controla módulo, regras, governança e operação global. |
| DOCS | DOCS - Valley Docs | [47-docs-admin.brasildesconto.com.br](https://47-docs-admin.brasildesconto.com.br/) | Controla módulo, regras, governança e operação global. |
| CHECKOUT-HTTPS-ALIAS | Checkout | [checkout-admin.brasildesconto.com.br](https://checkout-admin.brasildesconto.com.br/) | Conecta checkout, repasses, taxas e conciliação. |
| DROPSHIPPING-HTTPS-ALIAS | Dropshipping | [dropshipping-admin.brasildesconto.com.br](https://dropshipping-admin.brasildesconto.com.br/) | Alimenta catálogo, fornecedores, estoque e precificação. |
| FINANCE-HTTPS-ALIAS | Financeiro | [finance-admin.brasildesconto.com.br](https://finance-admin.brasildesconto.com.br/) | Conecta checkout, repasses, taxas e conciliação. |
| MARKETPLACE-HTTPS-ALIAS | Marketplace | [marketplace-admin.brasildesconto.com.br](https://marketplace-admin.brasildesconto.com.br/) | Controla integrações, canais, lojistas e publicações. |
| MERCHANTS-HTTPS-ALIAS | Lojistas | [merchants-admin.brasildesconto.com.br](https://merchants-admin.brasildesconto.com.br/) | Abre gestão de lojistas e vínculos com ERP. |
| REVIEW-HTTPS-ALIAS | Revisao | [review-admin.brasildesconto.com.br](https://review-admin.brasildesconto.com.br/) | Controla módulo, regras, governança e operação global. |
| SANDBOX-HTTPS-ALIAS | Sandbox e Flags | [sandbox-admin.brasildesconto.com.br](https://sandbox-admin.brasildesconto.com.br/) | Controla módulo, regras, governança e operação global. |
| STOCK-HTTPS-ALIAS | Painel STOCK | [stock-admin.brasildesconto.com.br](https://stock-admin.brasildesconto.com.br/) | Alimenta catálogo, fornecedores, estoque e precificação. |
| USERS-HTTPS-ALIAS | Usuarios | [users-admin.brasildesconto.com.br](https://users-admin.brasildesconto.com.br/) | Controla módulo, regras, governança e operação global. |

## Lojista

| Módulo | Tela/Painel | Link | Relação |
|---|---|---|---|
| MERCHANT_ERP | Armazem | [armazem-lojista.brasildesconto.com.br](https://armazem-lojista.brasildesconto.com.br/) | Opera rotina empresarial do lojista no ERP. |
| MERCHANT_ERP | Atendimento | [atendimento-lojista.brasildesconto.com.br](https://atendimento-lojista.brasildesconto.com.br/) | Opera rotina empresarial do lojista no ERP. |
| MERCHANT_ERP | Cadastro | [cadastro-lojista.brasildesconto.com.br](https://cadastro-lojista.brasildesconto.com.br/) | Opera rotina empresarial do lojista no ERP. |
| MERCHANT_ERP | Campanhas | [campanhas-lojista.brasildesconto.com.br](https://campanhas-lojista.brasildesconto.com.br/) | Opera rotina empresarial do lojista no ERP. |
| MERCHANT_ERP | Clientes | [clientes-lojista.brasildesconto.com.br](https://clientes-lojista.brasildesconto.com.br/) | Opera rotina empresarial do lojista no ERP. |
| MERCHANT_ERP | Configuracoes | [configuracoes-lojista.brasildesconto.com.br](https://configuracoes-lojista.brasildesconto.com.br/) | Opera rotina empresarial do lojista no ERP. |
| MERCHANT_ERP | Contabil | [contabil-lojista.brasildesconto.com.br](https://contabil-lojista.brasildesconto.com.br/) | Opera rotina empresarial do lojista no ERP. |
| MERCHANT_ERP | Equipe | [equipe-lojista.brasildesconto.com.br](https://equipe-lojista.brasildesconto.com.br/) | Opera rotina empresarial do lojista no ERP. |
| MERCHANT_ERP | ERP Lojista | [erp-lojista.brasildesconto.com.br](https://erp-lojista.brasildesconto.com.br/) | Opera rotina empresarial do lojista no ERP. |
| MERCHANT_ERP | Estoque | [estoque-lojista.brasildesconto.com.br](https://estoque-lojista.brasildesconto.com.br/) | Gerencia catálogo, saldo, SKU e publicação. |
| MERCHANT_ERP | Financeiro | [financeiro-lojista.brasildesconto.com.br](https://financeiro-lojista.brasildesconto.com.br/) | Opera rotina empresarial do lojista no ERP. |
| MERCHANT_ERP | Fiscal | [fiscal-lojista.brasildesconto.com.br](https://fiscal-lojista.brasildesconto.com.br/) | Opera rotina empresarial do lojista no ERP. |
| MERCHANT_ERP | Integracao | [integracao-lojista.brasildesconto.com.br](https://integracao-lojista.brasildesconto.com.br/) | Opera rotina empresarial do lojista no ERP. |
| MERCHANT_ERP | Inventario de Estoque | [inventario-lojista.brasildesconto.com.br](https://inventario-lojista.brasildesconto.com.br/) | Conta estoque físico e ajusta altas, baixas, avarias e volumes. |
| MERCHANT_ERP | Logistica | [logistica-lojista.brasildesconto.com.br](https://logistica-lojista.brasildesconto.com.br/) | Movimenta pedidos, CD, docas, rotas e entrega final. |
| MERCHANT_ERP | Login Lojista | [lojista.brasildesconto.com.br](https://lojista.brasildesconto.com.br/) | Opera rotina empresarial do lojista no ERP. |
| MERCHANT_ERP | Metricas | [metricas-lojista.brasildesconto.com.br](https://metricas-lojista.brasildesconto.com.br/) | Opera rotina empresarial do lojista no ERP. |
| MERCHANT_ERP | PDV | [pdv-lojista.brasildesconto.com.br](https://pdv-lojista.brasildesconto.com.br/) | Registra venda presencial, caixa e conciliação. |
| MERCHANT_ERP | Pedidos | [pedidos-lojista.brasildesconto.com.br](https://pedidos-lojista.brasildesconto.com.br/) | Opera rotina empresarial do lojista no ERP. |
| MERCHANT_ERP | Perfil | [perfil-lojista.brasildesconto.com.br](https://perfil-lojista.brasildesconto.com.br/) | Opera rotina empresarial do lojista no ERP. |
| MERCHANT_ERP | Produtos | [produtos-lojista.brasildesconto.com.br](https://produtos-lojista.brasildesconto.com.br/) | Gerencia catálogo, saldo, SKU e publicação. |
| MERCHANT_ERP | Relatorios | [relatorios-lojista.brasildesconto.com.br](https://relatorios-lojista.brasildesconto.com.br/) | Opera rotina empresarial do lojista no ERP. |
| MERCHANT_ERP | Seguranca | [seguranca-lojista.brasildesconto.com.br](https://seguranca-lojista.brasildesconto.com.br/) | Opera rotina empresarial do lojista no ERP. |
| MERCHANT_ERP | Transportadora e Cross Docking | [transportadora-lojista.brasildesconto.com.br](https://transportadora-lojista.brasildesconto.com.br/) | Movimenta pedidos, CD, docas, rotas e entrega final. |

## Usuário

| Módulo | Tela/Painel | Link | Relação |
|---|---|---|---|
| USUARIO | Portal público Valley | [brasildesconto.com.br](https://brasildesconto.com.br/) | Entrada oficial da marca e catálogo público |
| USUARIO | Produto web/mobile | [brasildesconto.com.br/product](https://brasildesconto.com.br/product/) | Catálogo, checkout, rastreio e conta do usuário |
